<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.view.launch.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/dimen_32"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:paddingHorizontal="24dp"
        android:text="@string/login_detailed_information"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAppName" />

    <LinearLayout
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/btn_login_with_google"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvUsingAppWithoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="@dimen/dimen_8"
        android:text="@string/continue_using_the_app_without_login"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>